Change of Title view logo

--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -6,7 +6,7 @@
              xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"  
              Shell.BackgroundColor="#0D6EFD"
              x:Class="DestoPesto.Views.ForgotPasswordPage">
-    
+
     <Shell.TitleView >
         <Grid InputTransparent="True"   VerticalOptions="Center">
             <Image HorizontalOptions="Start" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
@@ -14,17 +14,39 @@
     </Shell.TitleView>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="8*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
+                <StackLayout Grid.Row="1" Grid.Column="1" Orientation="Vertical" >
 
-            <Button Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
-            
-      
+                    <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText1}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Title"/>
+                    <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText2}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
 
-        
+                </StackLayout>
+                <Frame Grid.Row="2" Grid.Column="1"  BackgroundColor="Transparent"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
 
+                    <StackLayout Orientation="Horizontal">
+                        <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5">
+                            <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
+                        </Frame>
+
+                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" ></Entry>
+                    </StackLayout>
+                </Frame>
+                <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
+                <Button Grid.Row="4" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
