--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -4,22 +4,28 @@
               xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:resources="clr-namespace:DestoPesto"
              xmlns:extensions="clr-namespace:DestoPesto.Extensions"
-             Shell.NavBarIsVisible="False"
+             
+             Shell.BackgroundColor="#0D6EFD"
              x:Class="DestoPesto.Views.SignInPage">
     <ContentPage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
             <Setter Property="TextColor" Value="Red" />
         </Style>
     </ContentPage.Resources>
+    <Shell.TitleView >
+        <Grid InputTransparent="True"   VerticalOptions="Center">
+            <Image HorizontalOptions="Start" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
+        </Grid>
+    </Shell.TitleView>
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="10*" />
                 <RowDefinition Height="*"/>
 
             </Grid.RowDefinitions>
-            <Grid BackgroundColor="#0D6EFD"  Padding="10,10,0,0" >
+            <!--<Grid BackgroundColor="#0D6EFD"  Padding="10,10,0,0" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="18"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
@@ -33,8 +39,8 @@
                     </Image>
                 </Grid>
                 <Image Grid.Column="1" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" BackgroundColor="#0D6EFD"  />
-            </Grid>
-            
+            </Grid>-->
+
             <StackLayout Grid.Row="1" VerticalOptions="Center">
 
                 <!--<Image Source="{AppThemeBinding Light={extensions:ImageResource DestoPesto.Images.login_header.png}, Dark={extensions:ImageResource DestoPesto.Images.login_header.png}}"  />-->
@@ -84,9 +90,9 @@
                     <StackLayout  Orientation="Horizontal">
 
                         <Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}" TextColor="Blue" TextDecorations="Underline" x:Name="forgoPass">
-                            
+
                         </Label>
-                        
+
 
                         <!--<Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />-->
 
@@ -111,7 +117,7 @@
                 </StackLayout>-->
                 </StackLayout>
 
-               
+
             </StackLayout>
             <Image Grid.Row="2" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
         </Grid>
