--- a/DestoPesto/DestoPesto/Views/SignupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignupPage.xaml
@@ -8,7 +8,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:DestoPesto.CustomRenderer"
              mc:Ignorable="d"
              x:Class="DestoPesto.Views.SignupPage"
-             Shell.NavBarIsVisible="False">
+             Shell.BackgroundColor="#0D6EFD"
+             >
     <ContentPage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
             <Setter Property="TextColor" Value="Red" />
@@ -22,96 +23,102 @@
 
 
     <!--<StackLayout BackgroundColor="White">-->
-    <Grid BackgroundColor="White">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="10*" />
-            <RowDefinition Height="*"/>
+    <Shell.TitleView >
+        <Grid InputTransparent="True"   VerticalOptions="Center">
+            <Image HorizontalOptions="Start" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
+        </Grid>
+    </Shell.TitleView>
+    <ContentPage.Content>
+        <Grid BackgroundColor="White">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="10*" />
+                <RowDefinition Height="*"/>
 
-        </Grid.RowDefinitions>
-        <Image Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" BackgroundColor="#0D6EFD"  />
-        <StackLayout Grid.Row="1" VerticalOptions="Center">
-            <!--<Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />-->
+            </Grid.RowDefinitions>
+            <!--<Image Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" BackgroundColor="#0D6EFD"  />-->
+            <StackLayout Grid.Row="1" VerticalOptions="Center">
+                <!--<Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />-->
 
-            <!--<Frame  BackgroundColor="White" >-->
+                <!--<Frame  BackgroundColor="White" >-->
 
-            <StackLayout>
+                <StackLayout>
 
-                <!--<Image Source="{AppThemeBinding Light=icon.png, Dark=icon.png}" HeightRequest="90" VerticalOptions="EndAndExpand"/>-->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="8*"/>
-                    </Grid.ColumnDefinitions>
+                    <!--<Image Source="{AppThemeBinding Light=icon.png, Dark=icon.png}" HeightRequest="90" VerticalOptions="EndAndExpand"/>-->
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="8*"/>
+                        </Grid.ColumnDefinitions>
 
-                    <StackLayout Orientation="Vertical" Grid.Column="1">
+                        <StackLayout Orientation="Vertical" Grid.Column="1">
 
-                        <Label Text="{x:Static resources:Properties.Resources.LetsRegisterLineOneText}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Title"/>
-                        <Label Text="{x:Static resources:Properties.Resources.LetsRegisterLineTwoText}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
+                            <Label Text="{x:Static resources:Properties.Resources.LetsRegisterLineOneText}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Title"/>
+                            <Label Text="{x:Static resources:Properties.Resources.LetsRegisterLineTwoText}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
 
-                    </StackLayout>
-                </Grid>
-                <StackLayout Padding="0" Margin="15,10">
-                    <Frame BackgroundColor="Transparent" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                        <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">
-                                <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" />
-                            </Frame>
-
-
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
-                                <Entry.Behaviors>
-                                    <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
-                                        <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
-                                        <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1" DecorationFlags="Trim"/>
-                                    </xct:MultiValidationBehavior>
-                                </Entry.Behaviors>
-                            </Entry>
                         </StackLayout>
-                    </Frame>
+                    </Grid>
+                    <StackLayout Padding="0" Margin="15,10">
+                        <Frame BackgroundColor="Transparent" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                            <StackLayout Orientation="Horizontal">
+                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">
+                                    <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" />
+                                </Frame>
 
 
-                    <Frame BackgroundColor="Transparent" Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
-                        <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
-                                <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" />
-                            </Frame>
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}" x:Name="txtPassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
-                                <Entry.Behaviors>
-                                    <xct:TextValidationBehavior x:Name="PasswordValidator" MinimumLength="6" InvalidStyle="{StaticResource InvalidEntryStyle}"  Flags="ValidateOnValueChanging"/>
-                                </Entry.Behaviors>
-                            </Entry>
-                        </StackLayout>
-                    </Frame>
+                                <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                    <Entry.Behaviors>
+                                        <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
+                                            <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
+                                            <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1" DecorationFlags="Trim"/>
+                                        </xct:MultiValidationBehavior>
+                                    </Entry.Behaviors>
+                                </Entry>
+                            </StackLayout>
+                        </Frame>
 
-                    <Frame BackgroundColor="Transparent" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                        <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
-                                <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" />
-                            </Frame>
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.RePasswordPlaceHolder}" x:Name="txtReTypePassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
-                                <Entry.Behaviors>
-                                    <xct:RequiredStringValidationBehavior x:Name="RePasswordValidator" InvalidStyle="{StaticResource InvalidEntryStyle}"   RequiredString="{Binding Source={x:Reference txtPassword}, Path=Text}" Flags="ValidateOnValueChanging"/>
-                                </Entry.Behaviors>
-                            </Entry>
-                        </StackLayout>
-                    </Frame>
 
-                    <Frame BackgroundColor="Transparent" Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
-                        <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0"  Margin="5">
-                                <Image Source="{extensions:ImageResource DestoPesto.Images.user.png}" />
-                            </Frame>
+                        <Frame BackgroundColor="Transparent" Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
+                            <StackLayout Orientation="Horizontal">
+                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
+                                    <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" />
+                                </Frame>
+                                <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}" x:Name="txtPassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                    <Entry.Behaviors>
+                                        <xct:TextValidationBehavior x:Name="PasswordValidator" MinimumLength="6" InvalidStyle="{StaticResource InvalidEntryStyle}"  Flags="ValidateOnValueChanging"/>
+                                    </Entry.Behaviors>
+                                </Entry>
+                            </StackLayout>
+                        </Frame>
 
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.UserNameText}" x:Name="txtDOB"  PlaceholderColor="Gray"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
-                                <Entry.Behaviors >
-                                    <xct:TextValidationBehavior x:Name="UserValidator" MinimumLength="1"/>
-                                </Entry.Behaviors>
-                            </Entry>
-                        </StackLayout>
-                    </Frame>
+                        <Frame BackgroundColor="Transparent" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                            <StackLayout Orientation="Horizontal">
+                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
+                                    <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" />
+                                </Frame>
+                                <Entry Placeholder="{x:Static resources:Properties.Resources.RePasswordPlaceHolder}" x:Name="txtReTypePassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                    <Entry.Behaviors>
+                                        <xct:RequiredStringValidationBehavior x:Name="RePasswordValidator" InvalidStyle="{StaticResource InvalidEntryStyle}"   RequiredString="{Binding Source={x:Reference txtPassword}, Path=Text}" Flags="ValidateOnValueChanging"/>
+                                    </Entry.Behaviors>
+                                </Entry>
+                            </StackLayout>
+                        </Frame>
 
-                    <!--<StackLayout Orientation="Horizontal">
+                        <Frame BackgroundColor="Transparent" Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
+                            <StackLayout Orientation="Horizontal">
+                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0"  Margin="5">
+                                    <Image Source="{extensions:ImageResource DestoPesto.Images.user.png}" />
+                                </Frame>
+
+                                <Entry Placeholder="{x:Static resources:Properties.Resources.UserNameText}" x:Name="txtDOB"  PlaceholderColor="Gray"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                    <Entry.Behaviors >
+                                        <xct:TextValidationBehavior x:Name="UserValidator" MinimumLength="1"/>
+                                    </Entry.Behaviors>
+                                </Entry>
+                            </StackLayout>
+                        </Frame>
+
+                        <!--<StackLayout Orientation="Horizontal">
 
                                     <Label Text="Select Gender" TextColor="#89BB29" MinimumWidthRequest="50" FontSize="Medium"/>
                                     <RadioButton Content="Male"  TextColor="#89BB29"/>
@@ -119,26 +126,26 @@
                                     <RadioButton Content="Other" TextColor="#89BB29"  />
                                 </StackLayout>-->
 
-                    <Button Text="{x:Static resources:Properties.Resources.SignUpText}" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" Clicked="Button_Clicked" IsEnabled="{Binding IsValidInfo}"/>
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                        <Label Text="{x:Static resources:Properties.Resources.HaveAccountText}" TextColor="DarkGray" />
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                        <Label Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="lblSignin" TextColor="#0D6EFD" FontAttributes="Bold" />
-                    </StackLayout>
+                        <Button Text="{x:Static resources:Properties.Resources.SignUpText}" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" Clicked="Button_Clicked" IsEnabled="{Binding IsValidInfo}"/>
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                            <Label Text="{x:Static resources:Properties.Resources.HaveAccountText}" TextColor="DarkGray" />
+                        </StackLayout>
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                            <Label Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="lblSignin" TextColor="#0D6EFD" FontAttributes="Bold" />
+                        </StackLayout>
 
 
-                    <!--<Image Source="logoback.png" HeightRequest="30" VerticalOptions="EndAndExpand"/>-->
+                        <!--<Image Source="logoback.png" HeightRequest="30" VerticalOptions="EndAndExpand"/>-->
+
+                    </StackLayout>
+
 
                 </StackLayout>
 
-
+                <!--</Frame>-->
             </StackLayout>
-
-            <!--</Frame>-->
-        </StackLayout>
-        <Image Grid.Row="2" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
-    </Grid>
-    <!--</StackLayout>-->
-
+            <Image Grid.Row="2" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+        </Grid>
+        <!--</StackLayout>-->
+    </ContentPage.Content>
 </ContentPage>
