--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:extensions="clr-namespace:DestoPesto.Extensions"
              xmlns:resources="clr-namespace:DestoPesto"
-             xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"  
+             
              Shell.BackgroundColor="#0D6EFD"
              x:Class="DestoPesto.Views.ForgotPasswordPage">
-
+    <ContentPage.Resources>
+        <Style x:Key="InvalidEntryStyle" TargetType="Entry">
+            <Setter Property="TextColor" Value="Red" />
+        </Style>
+    </ContentPage.Resources>
     <Shell.TitleView >
         <Grid InputTransparent="True"   VerticalOptions="Center">
             <Image HorizontalOptions="Start" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
@@ -41,7 +46,15 @@
                             <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
                         </Frame>
 
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" ></Entry>
+                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" >
+                            <Entry.Behaviors>
+                                <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
+                                    <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
+                                    <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
+                                </xct:MultiValidationBehavior>
+                            </Entry.Behaviors>
+
+                        </Entry>
                     </StackLayout>
                 </Frame>
                 <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
