--- a/DestoPesto/DestoPesto/Views/SignInMessagePopUp.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInMessagePopUp.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
                  xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+                 xmlns:extensions="clr-namespace:DestoPesto.Extensions"
              x:Class="DestoPesto.Views.SignInMessagePopUp">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation DurationIn="400"
@@ -23,8 +24,13 @@
            IsClippedToBounds="True"
            Padding="10">
         <StackLayout  >
-            <Label Text="Welcome to Xamarin.Forms!" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
-            <Label Text="{Binding Message}"></Label>
+            <Frame   HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
+                <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" />
+                <!--<Image   InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.destopesto_logo_square_blue.png}" VerticalOptions="Center" />-->
+            </Frame>
+
+            <!--<Label Text="Welcome to Xamarin.Forms!" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />-->
+            <Label Text="{Binding Message}" ></Label>
         </StackLayout>
     </Frame>
 
