First page after login has changed and Text from web added to webview.

--- a/DestoPesto/DestoPesto/Views/AboutPage.xaml
+++ b/DestoPesto/DestoPesto/Views/AboutPage.xaml
@@ -69,8 +69,8 @@
                AbsoluteLayout.LayoutFlags="All" 
                HorizontalOptions="FillAndExpand"
                VerticalOptions="FillAndExpand" >
-            
-                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Source="https://asfameazure.blob.core.windows.net/destopesto/docs/homescreenmob.txt">
+
+                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Source="{x:Static resources:Properties.Resources.HomeScreenMobileLink}">
                     <!--https://asfameazure.blob.core.windows.net/destopesto/docs/homescreentext.txt-->
                 </WebView>
             </ContentView>
