--- a/DestoPesto/DestoPesto/Views/PermissionsPage.xaml
+++ b/DestoPesto/DestoPesto/Views/PermissionsPage.xaml
@@ -18,7 +18,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid HorizontalOptions="FillAndExpand" HeightRequest="200" BackgroundColor="Red">
-                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Source="https://asfameazure.blob.core.windows.net/destopesto/docs/homescreentext.txt">
+                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Source="{x:Static resources:Properties.Resources.HomeScreenMobileLink}">
                     <!--https://asfameazure.blob.core.windows.net/destopesto/docs/homescreentext.txt-->
                 </WebView>
             </Grid>
