--- a/DestoPesto/DestoPesto/Views/AboutPage.xaml
+++ b/DestoPesto/DestoPesto/Views/AboutPage.xaml
@@ -70,8 +70,10 @@
                HorizontalOptions="FillAndExpand"
                VerticalOptions="FillAndExpand" >
 
-                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Source="{x:Static resources:Properties.Resources.HomeScreenMobileLink}">
-                    <!--https://asfameazure.blob.core.windows.net/destopesto/docs/homescreentext.txt-->
+                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
+                    <WebView.Source>
+                        <HtmlWebViewSource Html="{Binding MobileHomePage}"/>
+                    </WebView.Source>
                 </WebView>
             </ContentView>
             <!--<Image Source="logoback.png" HeightRequest="30"  Margin="10,0,0,0" VerticalOptions="EndAndExpand"  AbsoluteLayout.LayoutBounds="0.8, 0.02, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"/>-->
