--- a/DestoPesto/DestoPesto/Views/AboutPage.xaml
+++ b/DestoPesto/DestoPesto/Views/AboutPage.xaml
@@ -51,12 +51,12 @@
         </Grid.ColumnDefinitions>
 
         <AbsoluteLayout IsVisible="{Binding MapIsVisible}" Grid.Row="0">
-            <ContentView  
+            <ContentView  x:Name="MapContent"
                AbsoluteLayout.LayoutBounds="0,0,1,1"
                AbsoluteLayout.LayoutFlags="All" 
                HorizontalOptions="FillAndExpand"
                VerticalOptions="FillAndExpand" >
-                <map:MapEx IsVisible="{Binding MapIsVisible}" x:Name="map" MapClicked="map_MapClicked"  HasScrollEnabled="True" MapType="Street" HasZoomEnabled="True" IsShowingUser="true" PropertyChanged="map_PropertyChangedAsync"></map:MapEx>
+                <!--<map:MapEx IsVisible="{Binding MapIsVisible}" x:Name="map" MapClicked="map_MapClicked"  HasScrollEnabled="True" MapType="Street" HasZoomEnabled="True" IsShowingUser="true" PropertyChanged="map_PropertyChangedAsync"></map:MapEx>-->
             
             </ContentView>
             <!--<Image Source="logoback.png" HeightRequest="30"  Margin="10,0,0,0" VerticalOptions="EndAndExpand"  AbsoluteLayout.LayoutBounds="0.8, 0.02, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"/>-->
